chrome visibility fix

--- a/packages/0confirmation-swap-react/src/components/App.css
+++ b/packages/0confirmation-swap-react/src/components/App.css
@@ -35,12 +35,14 @@ body {
   .connect-wallet-btn {
     padding-right: 3rem;
     justify-content: end;
+    justify-content: flex-end;
   }
 }
 
 @media (max-width: 575px) {
   .connect-wallet-btn {
     justify-content: center;
+    align-content: center;
   }
 }
 
